bk_ida/gobmkida/c3/recognize_eye
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/recognize_eye/src/engine/optics.c:1792:44: error: use of undeclared identifier 'xmmword_4A89F0'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_4A89F0); 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/recognize_eye/src/engine/optics.c:1878:11: error: use of undeclared identifier 'eyevalue'
*v110 = ( eyevalue)v62; 
          ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/recognize_eye/src/engine/optics.c:2000:15: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( double *)v7.m128i_i64, 
            ~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/recognize_eye/src/engine/optics.c:2001:15: error: member reference base type '__m128' (vector of 4 'float' values) is not a structure or union
*( double *)v8.m128_u64, 
            ~~^~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/recognize_eye/src/engine/optics.c:2002:18: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
*( double *)si128.m128i_i64); 
            ~~~~~^~~~~~~~~~
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/recognize_eye/src/engine/optics.c:2032:1: error: use of undeclared identifier 'byte_A5304F'
byte_A5304F[v45] = 1; 
^
6 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/recognize_eye/src/obj/1/optics.o] Error 1
